tests/specs/ecosystem/std/console/0_203_0.test
std/console/0.203.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /unicode_width.ts:60:17
   | 
60 | export function unicodeWidth(str: string) {
   |                 ^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


